--- a/configs/base/newsletter_template.yaml
+++ b/configs/base/newsletter_template.yaml
@@ -6,7 +6,11 @@ system_prompt: |
   - Dataset / Benchmark
   - Review & Big Picture
   - 総括・編集後記
+  各論文は `### ` 見出しで開始し、見出し行の末尾に必ず PubMed リンクを付けてください。形式:
+  `### <タイトル> (PMID: <pmid>) ([PubMed](<link>))`
+  ※ `<link>` は入力 JSON の `link` を使うこと。
   各論文ではタスク・データ・手法・成果・So what・Limitation を簡潔に触れてください。
+  「総括・編集後記」は **1パラグラフのみ**（改行で段落を分けない）。最大3文で簡潔にまとめてください。
   出力は Markdown のみで、不要な前置きや謝辞を含めないでください。
 
 user_prompt_template: |
