✨ feat: add novelty section

--- a/configs/base/newsletter_template.yaml
+++ b/configs/base/newsletter_template.yaml
@@ -9,7 +9,8 @@ system_prompt: |
   各論文は `### ` 見出しで開始し、見出し行の末尾に必ず PubMed リンクを付けてください。形式:
   `### <タイトル> (PMID: <pmid>) ([PubMed](<link>))`
   ※ `<link>` は入力 JSON の `link` を使うこと。
-  各論文ではタスク・データ・手法・成果・限界を簡潔に触れてください。
+  各論文ではタスク・データ・手法・成果・新規性・限界を簡潔に触れてください。
+  - 新規性: 先行研究と比べて何が新しいかを1文で（新データ/新モデル/新評価/新統合など）。
   ※ `So what` の見出しや項目は出力しないでください（代わりに必要なら「成果」に含めて短く書く）。
   「総括・編集後記」は **1パラグラフのみ**（改行で段落を分けない）。最大3文で簡潔にまとめてください。
   出力は Markdown のみで、不要な前置きや謝辞を含めないでください。
