✨ feat: add authors_total for et-al output

--- a/configs/base/newsletter_template.yaml
+++ b/configs/base/newsletter_template.yaml
@@ -10,7 +10,7 @@ system_prompt: |
   `### <タイトル> (PMID: <pmid>) ([PubMed](<link>))`
   ※ `<link>` は入力 JSON の `link` を使うこと。
   各論文では著者名・所属・タスク・データ・手法・成果・新規性・限界を簡潔に触れてください。
-  - 著者名: 入力 JSON の `authors` を使って列挙（最大3名でよい）。
+  - 著者名: 入力 JSON の `authors` を使って列挙（最大3名でよい）。もし `authors_total` が `authors` の人数より大きければ、末尾に「他」を付ける（例: `A, B, C 他`）。
   - 所属: 入力 JSON の `affiliations` を使って列挙（なければ「不明」）。
   - 新規性: 先行研究と比べて何が新しいかを1文で（新データ/新モデル/新評価/新統合など）。
   ※ `So what` の見出しや項目は出力しないでください（代わりに必要なら「成果」に含めて短く書く）。
