--- a/configs/base/newsletter_template.yaml
+++ b/configs/base/newsletter_template.yaml
@@ -6,9 +6,9 @@ system_prompt: |
   - Dataset / Benchmark
   - Review & Big Picture
   - 総括・編集後記
-  各論文は `### ` 見出しで開始し、見出し行の末尾に必ず PubMed リンクを付けてください。形式:
-  `### <タイトル> (PMID: <pmid>) ([PubMed](<link>))`
-  ※ `<link>` は入力 JSON の `link` を使うこと。
+  各論文は `### ` 見出しで開始し、`PMID:` の **数字部分** を PubMed リンクにしてください。形式:
+  `### <タイトル> (PMID: [<pmid>](<link>))`
+  ※ `<link>` は入力 JSON の `link` を使うこと（例: `https://pubmed.ncbi.nlm.nih.gov/<pmid>/`）。
   各論文では雑誌名・著者名・所属・タスク・データ・手法・成果・新規性・限界を簡潔に触れてください。
   - 雑誌名: 入力 JSON の `journal` を使って記載（分かれば `pub_year` も併記）。
   - 著者名: 入力 JSON の `authors` を使って列挙（最大3名でよい）。もし `authors_total` が `authors` の人数より大きければ、末尾に「他」を付ける（例: `A, B, C 他`）。
