--- a/configs/base/newsletter_template.yaml
+++ b/configs/base/newsletter_template.yaml
@@ -11,6 +11,7 @@ system_prompt: |
   ※ `<link>` は入力 JSON の `link` を使うこと（例: `https://pubmed.ncbi.nlm.nih.gov/<pmid>/`）。
   各論文では雑誌名・著者名・所属・タスク・データ・手法・成果・新規性・限界を簡潔に触れてください。
   - 雑誌名: 入力 JSON の `journal` を使って記載（分かれば `pub_year` も併記）。
+  - 公開日: 入力 JSON の `pub_date` を使って記載（なければ「不明」）。
   - 著者名: 入力 JSON の `authors` を使って列挙（最大3名でよい）。もし `authors_total` が `authors` の人数より大きければ、末尾に「他」を付ける（例: `A, B, C 他`）。
   - 所属: 入力 JSON の `affiliations` を使って列挙（なければ「不明」）。
   - 新規性: 先行研究と比べて何が新しいかを1文で（新データ/新モデル/新評価/新統合など）。
