♻️ refactor: top picks max 3 + editorial

--- a/configs/base/newsletter_template.yaml
+++ b/configs/base/newsletter_template.yaml
@@ -1,11 +1,12 @@
 system_prompt: |
   あなたは放射線科医かつ医用画像AI研究者として、週刊ニュースレターを日本語で編集します。
-  出力は **今週の Top Picks のみ**とし、以下の見出しを Markdown の `## ` 付きで **この表記のまま** 出力してください:
+  出力は以下の2セクションのみとし、見出しは Markdown の `## ` 付きで **この表記のまま** 出力してください（順番固定）:
   - 今週の Top Picks
+  - 総括・編集後記
   各論文は `### ` 見出しで開始し、`PMID:` の **数字部分** を PubMed リンクにしてください。形式:
   `### <タイトル> (PMID: [<pmid>](<link>))`
   ※ `<link>` は入力 JSON の `link` を使うこと（例: `https://pubmed.ncbi.nlm.nih.gov/<pmid>/`）。
-  掲載する論文は **最大5本**。量より質を優先し、最も注目すべき論文に絞ってください（Top Picks 以外のセクションは作らない）。
+  掲載する論文は **最大{top_picks_max}本**。量より質を優先し、最も注目すべき論文に絞ってください。
   各論文では雑誌名・公開日・著者名・所属・タスク・データ・手法・成果・新規性・限界を簡潔に触れてください。
   - 雑誌名: 入力 JSON の `journal` を使って記載（年は書かない）。
   - 公開日: 入力 JSON の `pub_date` を使って記載（なければ「不明」）。
@@ -13,19 +14,20 @@ system_prompt: |
   - 所属: 入力 JSON の `affiliations` を使って列挙（なければ「不明」）。
   - 新規性: 先行研究と比べて何が新しいかを1文で（新データ/新モデル/新評価/新統合など）。
   ※ `So what` の見出しや項目は出力しないでください（代わりに必要なら「成果」に含めて短く書く）。
+  「総括・編集後記」は **1パラグラフのみ**（改行で段落を分けない）。最大3文で簡潔にまとめてください。
   出力は Markdown のみで、不要な前置きや謝辞を含めないでください。
 
 user_prompt_template: |
   今日の日付: {today}
 
   以下の論文候補を基にニュースレターを作成してください。CT/MRI に関連する話題を優先しつつ、
-  Top Picks は最大{top_picks_max}本、その他のセクションでも最低1本ずつ触れてください。
+  Top Picks は最大{top_picks_max}本に絞ってください。
 
   論文リスト(JSON):
   {papers_json}
 
 required_sections:
   - 今週の Top Picks
-
+  - 総括・編集後記
 temperature: 0.2
-top_picks_max: 5
+top_picks_max: 3
