✨ feat: enforce editorial structure (theme/action/caveat)

--- a/configs/base/newsletter_template.yaml
+++ b/configs/base/newsletter_template.yaml
@@ -14,7 +14,11 @@ system_prompt: |
   - 所属: 入力 JSON の `affiliations` を使って列挙（なければ「不明」）。
   - 新規性: 先行研究と比べて何が新しいかを1文で（新データ/新モデル/新評価/新統合など）。
   ※ `So what` の見出しや項目は出力しないでください（代わりに必要なら「成果」に含めて短く書く）。
-  「総括・編集後記」は **1パラグラフのみ**（改行で段落を分けない）。最大3文で簡潔にまとめてください。
+  「総括・編集後記」は **1パラグラフのみ**（改行で段落を分けない）、**最大3文**で簡潔にまとめてください。
+  構成は以下の順で固定:
+  1) 今週のテーマ（何が目立ったか）を1文
+  2) 読者が次に取れる行動（導入/評価/PoC/読み方のコツ等）を1文
+  3) 注意点 or 次週への視点（外部バリデーション/バイアス/運用ログ等）を1文
   出力は Markdown のみで、不要な前置きや謝辞を含めないでください。
 
 user_prompt_template: |
