--- a/.github/workflows/newsletter-buttondown.yml
+++ b/.github/workflows/newsletter-buttondown.yml
@@ -24,6 +24,8 @@ jobs:
           PUBMED_API_KEY: ${{ secrets.PUBMED_API_KEY }}
           BUTTONDOWN_API_KEY: ${{ secrets.BUTTONDOWN_API_KEY }}
           BUTTONDOWN_STATUS: draft
+          SUMMARY_IMAGE_ENABLED: "true"
+          SUMMARY_IMAGE_EMBED: "true"
           NEWSLETTER_TEMPLATE_PATH: configs/base/newsletter_template.yaml
           PYTHONPATH: ${{ github.workspace }}:${{ github.workspace }}/src
         run: uv run python scripts/run_pipeline.py
