--- a/.github/workflows/newsletter-buttondown.yml
+++ b/.github/workflows/newsletter-buttondown.yml
@@ -8,6 +8,11 @@ on:
 
 permissions:
   contents: write
+  issues: write
+
+concurrency:
+  group: newsletter-buttondown
+  cancel-in-progress: false
 
 jobs:
   run-newsletter:
@@ -42,3 +47,27 @@ jobs:
           fi
           git commit -m "[Automated] Update CT/MRI×AI Weekly archive"
           git push
+
+      - name: Notify failure (create GitHub Issue)
+        if: failure()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const dateStr = new Date().toISOString().slice(0, 10);
+            const runUrl = `${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
+            const title = `[Auto] CT/MRI×AI Weekly failed (${dateStr})`;
+            const body = [
+              `ニュースレター自動配信の workflow が失敗しました。`,
+              ``,
+              `- Workflow: ${context.workflow}`,
+              `- Run: ${runUrl}`,
+              `- Commit: ${context.sha}`,
+              ``,
+              `まずは Run のログを確認してください。`,
+            ].join("\n");
+            await github.rest.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title,
+              body,
+            });
